Fix collapsing animation

--- a/src/components/Tree/Tree.sass
+++ b/src/components/Tree/Tree.sass
@@ -7,6 +7,7 @@ p
   border: 2px solid black
 
 .linesContainer
+  height: auto
   display: flex
   flex-direction: column
   align-items: flex-start
@@ -19,4 +20,3 @@ p
   overflow: hidden
   height: auto
   transition: height 1s
-
